--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3298a92f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7df300fd50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f329796d750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f329799e410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7df2d27310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7df2d27510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3298207c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3298210d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7df2f72bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7df2f72dd0&gt;]</pre>
 </div>
 
 </div>
