--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f47f2116050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f54c0700950&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f47f2402110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f47f2402350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f54c0433290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f54c0433490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f47f2c84990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f47f2c84bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f54c0cb4b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f54c0cb4d50&gt;]</pre>
 </div>
 
 </div>
