--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f222bef7a10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc28b0f05d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f222ad3a310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f222ad3a510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc28b20e1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc28b20e410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f222b5bdd50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f222b5bdf50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc28ba94a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc28ba94cd0&gt;]</pre>
 </div>
 
 </div>
