--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7b7a174dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff1bda53750&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7b79ea1250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7b79ea1450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff1bddc9250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff1bddc9450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7b7a722b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7b7a722d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff1be015bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff1be015dd0&gt;]</pre>
 </div>
 
 </div>
