--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff1bda53750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faee93a2cd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff1bddc9250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff1bddc9450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faee8d27350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faee8d27550&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff1be015bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff1be015dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faee95c0c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faee95c0e50&gt;]</pre>
 </div>
 
 </div>
