--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faee93a2cd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcb3122f150&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faee8d27350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faee8d27550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb30918090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcb30918290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faee95c0c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faee95c0e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb3119ca10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcb3119cc10&gt;]</pre>
 </div>
 
 </div>
