--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcb3122f150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe8a4c00810&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb30918090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcb30918290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe8a3a68290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe8a3a68490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb3119ca10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcb3119cc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe8a42dcc50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe8a42dce50&gt;]</pre>
 </div>
 
 </div>
