--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1cd23c2e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f721a526ad0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1cd12ac8d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1cd12bb350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f721a5bc150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f721a5bc350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1cd1b35990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1cd1b3ec90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f721ae54ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f721ae54cd0&gt;]</pre>
 </div>
 
 </div>
