--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fedfdbf5910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff754820110&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fedfd2d3390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fedfd2d3590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff754e93210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff754e93410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fedfdb4dd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fedfdb4df10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff7550cdb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff7550cdd50&gt;]</pre>
 </div>
 
 </div>
