--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff754820110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff75b42de50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff754e93210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff754e93410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff75b771310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff75b771510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff7550cdb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff7550cdd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff75ba15b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff75b9d6dd0&gt;]</pre>
 </div>
 
 </div>
