--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fedce195190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f443e8ab350&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fedce1bf190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fedce1bf390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f443e312210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f443e312410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fedcea59ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fedcea59cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f443eb93a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f443eb93c50&gt;]</pre>
 </div>
 
 </div>
