--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb41caaa390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1156874c90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb41c4a2390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb41c4a2590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f115627a390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f115627a590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb41cd14c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb41cd14e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1156afec50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1156afee50&gt;]</pre>
 </div>
 
 </div>
