--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc9df0b8c50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5be4376650&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9ded89190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc9ded893d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5be46fedd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5be46df310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9df60db10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc9df60dd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5be49377d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5be4940cd0&gt;]</pre>
 </div>
 
 </div>
