--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f06a17f7090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efe67928a10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f06a152a190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f06a152a390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efe67320090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efe67320290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f06a1daba90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f06a1dabc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efe67ba2990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efe67ba2b90&gt;]</pre>
 </div>
 
 </div>
