--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efe67928a10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f50e0169290&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efe67320090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efe67320290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f50dfbca190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f50dfbca390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efe67ba2990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efe67ba2b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f50e044fad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f50e044fcd0&gt;]</pre>
 </div>
 
 </div>
