--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7eea296e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3dfc3fa090&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ee9c81310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7ee9c81510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3dfcd1f850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3dfc6ce3d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7eea4fec10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7eea4fee10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3dfcfb6210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3dfcf67d90&gt;]</pre>
 </div>
 
 </div>
