--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3dfc3fa090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa4df486710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3dfcd1f850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3dfc6ce3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4de391390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa4de391590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3dfcfb6210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3dfcf67d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4dec04c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa4dec04e50&gt;]</pre>
 </div>
 
 </div>
