--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa4df486710&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f12313c25d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4de391390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa4de391590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1230dee2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1230dee450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4dec04c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa4dec04e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1231686c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1231686d90&gt;]</pre>
 </div>
 
 </div>
