--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2923b3fd10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f671161f410&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f29238611d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2923861410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f671165d210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f671165d410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f29240e4b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f29240e4d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6711ef8b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6711ef8d10&gt;]</pre>
 </div>
 
 </div>
