--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f671161f410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f02a0d9eb50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f671165d210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f671165d410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f02a04522d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f02a0452510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6711ef8b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6711ef8d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f02a0cd6b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f02a0cd6d90&gt;]</pre>
 </div>
 
 </div>
