--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4857728290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9320ee6b10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4857409250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4857409450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9320bb41d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9320bb43d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4857c8bad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4857c8bcd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9321436ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9321436cd0&gt;]</pre>
 </div>
 
 </div>
