--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa4fc4657d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f43d8909f10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4fb29ff90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa4fb2a91d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f43d7d84390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f43d7d84590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4fbb429d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa4fbb42bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f43d7fd2c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f43d7fd2e50&gt;]</pre>
 </div>
 
 </div>
