--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f64c0a734d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f14c03edcd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f64bfeec390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f64bfeec590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f14c0ce3110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f14c0ce3350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f64c014cc50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f64c014ce50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f14c0f45a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f14c0f45c50&gt;]</pre>
 </div>
 
 </div>
