--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7facc9a511d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc1e01ce990&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7facc9aa8250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7facc9aa8490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc1df711190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc1df711390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7facca33fad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7facca33fd10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc1df971cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc1df971ed0&gt;]</pre>
 </div>
 
 </div>
