--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0dd2121910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f373fa0dbd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0dd10442d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0dd10444d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3740076210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3740076410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0dd18c4c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0dd18c4e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f37402d6a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f37402d6c50&gt;]</pre>
 </div>
 
 </div>
