--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f373fa0dbd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd6f68e97d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3740076210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3740076410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6f6bf1310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd6f6bf1510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f37402d6a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f37402d6c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6f7463bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd6f7463dd0&gt;]</pre>
 </div>
 
 </div>
