--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa0334de610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fba8f2a2450&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa03350b190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa03350b390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fba8f91e250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fba8f91e450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa033d8ba50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa033d8bc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fba8fb59b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fba8fb59d10&gt;]</pre>
 </div>
 
 </div>
