--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fba8f2a2450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1d7dddd650&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fba8f91e250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fba8f91e450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1d7de18490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1d7de18650&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fba8fb59b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fba8fb59d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1d7e688d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1d7e688f50&gt;]</pre>
 </div>
 
 </div>
