--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fac949f2890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f17466a9f90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fac940d0410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fac940d0610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1746d2c090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1746d2c290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fac94955c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fac94955e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1746f6a990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1746f6ab90&gt;]</pre>
 </div>
 
 </div>
