--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa9a45cb150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6790a0ad50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9a34b1310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa9a34b1510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6790b4a1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6790b4a3d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9a3d49bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa9a3d49dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6791415310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f67913cacd0&gt;]</pre>
 </div>
 
 </div>
