--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe4b70e3b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feb3d138f10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe4b7449250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe4b7449450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feb3d4cf8d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feb3d498410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe4b7696b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe4b7696d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feb3d76b210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feb3d6fcd10&gt;]</pre>
 </div>
 
 </div>
