--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5b1e7e8d10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb89f109350&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b1eafb210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5b1eafb410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb89fa2a390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb89fa2a590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b1ed35b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5b1ed35d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb89fc74c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb89fc74e10&gt;]</pre>
 </div>
 
 </div>
