--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8874601ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffb4058b150&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f887463c490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f887463c690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb406d0190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffb406d03d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8874888dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8874888fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb40f44a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffb40f44cd0&gt;]</pre>
 </div>
 
 </div>
