--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fca9e9e9890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd8dd01c410&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fca9eccb410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fca9eccb610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd8b3516fd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd8b3517210&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fca9f563cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fca9f563ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd8b3751950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd8b3751b50&gt;]</pre>
 </div>
 
 </div>
