--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7c2aed4810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f203cd3c290&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c2abd0e50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7c2abeb510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f203bb5b410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f203bb5b610&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c2b454850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7c2b45bed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f203c3f3c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f203c3f3e50&gt;]</pre>
 </div>
 
 </div>
