--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3ad6ead750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f08a6c96410&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ad5cfc150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3ad5cfc310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f08a6f6c1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f08a6f6c3d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ad657dad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3ad657dc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f08a77eeb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f08a77eed10&gt;]</pre>
 </div>
 
 </div>
