--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc740ffe610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f638e70bed0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc74109c250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc74109c450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f638e09e0d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f638e09e2d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc741933b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc741933d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f638e924950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f638e924b50&gt;]</pre>
 </div>
 
 </div>
