--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f686b10b810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa9db207450&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f686a291a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6869f5b2d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9db4fa310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa9db4fa510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f686a835950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f686a7e1c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9dbdb6590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa9dbd6ee10&gt;]</pre>
 </div>
 
 </div>
