--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3a38d54790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1a3baaea90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3a387a2350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3a387a2550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a3b191210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1a3b191410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3a3903cc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3a3903ce10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a3ba12ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1a3ba12cd0&gt;]</pre>
 </div>
 
 </div>
