--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f00d216cc10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fba270a7e10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f00d184f410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f00d184f610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fba26ad8290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fba26ad8490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f00d20d0cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f00d20d0ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fba2734bb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fba2734bd90&gt;]</pre>
 </div>
 
 </div>
