--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fba270a7e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd6af2c8cd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fba26ad8290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fba26ad8490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6aecc0110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd6aecc02d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fba2734bb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fba2734bd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6af532a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd6af532c50&gt;]</pre>
 </div>
 
 </div>
