--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f788eb25390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9828e7d610&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f788ec463d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f788ec46610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f98295a2150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f98295a2390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f788f4dec90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f788f4deed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f98297dd990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f98297ddbd0&gt;]</pre>
 </div>
 
 </div>
