--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6a4119c090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa9c7bd8650&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6a41482250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6a41482450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9c7d32710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa9c7d2a290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6a41d01ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6a41d01cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9c861b0d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa9c85abc10&gt;]</pre>
 </div>
 
 </div>
