--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f012bbe8450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4d2a4dc4d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f012b8d44d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f012b8d9290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4d2a4b8210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4d2a4b8410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f012be6b910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f012be76b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4d2aa59b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4d2aa59d90&gt;]</pre>
 </div>
 
 </div>
