--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff6046ba590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f723c377c10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff6043a9390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff6043a9590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f723c04d110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f723c04d310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff604949c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff604949e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f723c5f79d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f723c5f7bd0&gt;]</pre>
 </div>
 
 </div>
