--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff351c19ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f45b5cbdf10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff351c53a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff351901310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f45b5c6c290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f45b5c6c490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff351ee8410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff351e9dc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f45b621dbd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f45b621ddd0&gt;]</pre>
 </div>
 
 </div>
