--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7ba04fa290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f913b8a3950&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ba07dc250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7ba07dc450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f913b57b1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f913b57b410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ba0d8fad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7ba0d8fcd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f913bb18b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f913bb18d90&gt;]</pre>
 </div>
 
 </div>
